Changed file structure to work with Cordova platform, app now runs on android devices. Styling and source HTML/JavaScript files are now located in the www directory

--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,10 @@
 <head>
 	<title>Local Data Test</title>
 	<link href="style/style.css" rel="stylesheet"/>
+	<script>
+	
+
+	</script>
 </head>
 <body>
 
@@ -23,11 +27,16 @@
 				<div class="underling">Last Name:<input type="text" id="repLast" class="input"/></div><br/><br/>
 			Weather or Special Conditions:<textarea type="text" id="weatherCom" class="textArea"></textarea>
 			<br/><br/><br/><br/>
-			<input type="button" value="Next Page >" id="btnSave" onclick="storeLocalContent()"/>
-			<input type="button" value="clear" id="btnClear" onclick="clearLocalContent()"/>
+			<input type="button" value="Next Page >" class="btn" id="btnSave" onclick="storeLocalContent()"/>
+			<input type="button" value="Clear Memory" class="btn" id="btnClear" onclick="clearLocalContent()"/>
 		</form>
 
-	</div>
+
+	
+   
+
+    </div>
+  
 
 </body>
 <link rel="stylesheet" type="text/css" href="vendor/dateTimePicker/jquery.datetimepicker.css"/ >
