--- a/www/index.html
+++ b/www/index.html
@@ -11,7 +11,7 @@
 <body>
 
 	<div class="center pageOne container page">
-			<h1>Residential Constrction Site Safety Inspection Evaluation</h1>
+			<h1>Residential Construction Site Safety Inspection and Evaluation</h1>
 		<form>
 			Company Inspected: <input type="text" id="company" class="input"/><br/><br/>
 			Trade: <input type="text" id="trade" class="input"/><br/><br/>
