--- a/www/index.html
+++ b/www/index.html
@@ -13,15 +13,15 @@
 	<div class="center pageOne container page">
 			<h1>Residential Construction Site Safety Inspection and Evaluation</h1>
 		<form>
-			Company Inspected: <input type="text" id="company" class="input"/><br/><br/>
-			Trade: <input type="text" id="trade" class="input"/><br/><br/>
-			Job Name: <input type="text" id="jobName" class="input"/><br/><br/>
-			Job #: <input type="text" id="jobNum" class="input"/><br/><br/>
-			Inspection by: <input type="text" id="inspBy" class="input"/> <br/><br/>
-			Title: <input type="text" id="title" class="input"/><br/><br/>
-			Employee #: <input type="text" id="empNum" class="input"/><br/><br/>
-			Start Date &amp; Time: <input type="text" id="datetimepicker" class="input beginTime"/><br/><br/>
-			End Date &amp; Time: <input type="text" id="datetimepicker2" class="input endTime"/><br/><br/>
+			<div class="label">Company Inspected:</div> <input type="text" id="company" class="input"/><br/><br/>
+			<div class="label">Trade:</div> <input type="text" id="trade" class="input"/><br/><br/>
+			<div class="label">Job Name:</div> <input type="text" id="jobName" class="input"/><br/><br/>
+			<div class="label">Job #:</div> <input type="text" id="jobNum" class="input"/><br/><br/>
+			<div class="label">Inspection by:</div> <input type="text" id="inspBy" class="input"/> <br/><br/>
+			<div class="label">Title:</div> <input type="text" id="title" class="input"/><br/><br/>
+			<div class="label">Employee #:</div> <input type="text" id="empNum" class="input"/><br/><br/>
+			<div class="label">Start Date</div> &amp; Time: <input type="text" id="datetimepicker" class="input beginTime"/><br/><br/>
+			<div class="label">End Date</div> &amp; Time: <input type="text" id="datetimepicker2" class="input endTime"/><br/><br/>
 			<h3>On-Site Safety Rep or Competent Person:</h3><br/>
 				<div class="underling">First Name:<input type="text" id="repFirst" class="input"/></div><br/><br/>
 				<div class="underling">Last Name:<input type="text" id="repLast" class="input"/></div><br/><br/>
