--- a/www/index.html
+++ b/www/index.html
@@ -20,8 +20,8 @@
 			<div class="label">Inspection by:</div> <input type="text" id="inspBy" class="input"/> <br/><br/>
 			<div class="label">Title:</div> <input type="text" id="title" class="input"/><br/><br/>
 			<div class="label">Employee #:</div> <input type="text" id="empNum" class="input"/><br/><br/>
-			<div class="label">Start Date</div> &amp; Time: <input type="text" id="datetimepicker" class="input beginTime"/><br/><br/>
-			<div class="label">End Date</div> &amp; Time: <input type="text" id="datetimepicker2" class="input endTime"/><br/><br/>
+			<div class="label">Start Date &amp; Time:</div> <input type="text" id="datetimepicker" class="input beginTime"/><br/><br/>
+			<div class="label">End Date &amp; Time:</div> <input type="text" id="datetimepicker2" class="input endTime"/><br/><br/>
 			<h3>On-Site Safety Rep or Competent Person:</h3><br/>
 				<div class="underling">First Name:<input type="text" id="repFirst" class="input"/></div><br/><br/>
 				<div class="underling">Last Name:<input type="text" id="repLast" class="input"/></div><br/><br/>
