--- a/www/index.html
+++ b/www/index.html
@@ -22,9 +22,10 @@
 			<div class="label">Employee #:</div> <input type="text" id="empNum" class="input"/><br/><br/>
 			<div class="label">Start Date &amp; Time:</div> <input type="text" id="datetimepicker" class="input beginTime"/><br/><br/>
 			<div class="label">End Date &amp; Time:</div> <input type="text" id="datetimepicker2" class="input endTime"/><br/><br/>
-			<h3>On-Site Safety Rep or Competent Person:</h3><br/>
-				<div class="underling">First Name:<input type="text" id="repFirst" class="input"/></div><br/><br/>
-				<div class="underling">Last Name:<input type="text" id="repLast" class="input"/></div><br/><br/>
+			<label>On-Site Safety Rep or Competent Person:</label><br/>
+				<div class="underling"><input type="text" id="repFirst" class="input"/>First Name:</div><br/><br/>
+				<div class="underling"><input type="text" id="repLast" class="input"/>Last Name:</div><br/><br/>
+			Employee Number:<textarea type="text" id="employeeNum" class="textArea"></textarea>
 			Weather or Special Conditions:<textarea type="text" id="weatherCom" class="textArea"></textarea>
 			<br/><br/><br/><br/>
 			<input type="button" value="Next Page >" class="btn" id="btnSave" onclick="storeLocalContent()"/>
