--- a/www/index.html
+++ b/www/index.html
@@ -25,8 +25,8 @@
 			<div class="on-site">On-Site Safety Rep or Competent Person:</div><br/>
 				<div class="underling"><input type="text" id="repFirst" class="input"/><div class="on-site-label">First Name:</div></div><br/><br/>
 				<div class="underling"><input type="text" id="repLast" class="input"/><div class="on-site-label">Last Name:</div></div><br/><br/>
-			Employee Number:<textarea type="text" id="employeeNum" class="textArea"></textarea>
-			Weather or Special Conditions:<textarea type="text" id="weatherCom" class="textArea"></textarea>
+			<div class="label">Employee Number:</div><textarea type="text" id="employeeNum" class="textArea"></textarea>
+			<div class="label">Weather or Special Conditions:</div><textarea type="text" id="weatherCom" class="textArea"></textarea>
 			<br/><br/><br/><br/>
 			<input type="button" value="Next Page >" class="btn" id="btnSave" onclick="storeLocalContent()"/>
 			<input type="button" value="Clear Memory" class="btn" id="btnClear" onclick="clearLocalContent()"/>
