--- a/www/index.html
+++ b/www/index.html
@@ -3,8 +3,6 @@
 <head>
 	<title>Local Data Test</title>
 	<link href="style/style.css" rel="stylesheet"/>
-	<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.no-icons.min.css" rel="stylesheet">
-<link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 	<script>
 	
 
@@ -30,7 +28,7 @@
 			<div class="label">Employee Number:</div><textarea type="text" id="employeeNum" class="textArea"></textarea>
 			<div class="label">Weather or Special Conditions:</div><textarea type="text" id="weatherCom" class="textArea"></textarea>
 			<br/><br/><br/><br/>
-			<input type="button" value="<i class="icon-long-arrow-right"></i>" class="btn" id="btnSave" onclick="storeLocalContent()"/>
+			<input type="button" value="Next Page" class="btn" id="btnSave" onclick="storeLocalContent()"/>
 			<input type="button" value="Clear Memory" class="btn" id="btnClear" onclick="clearLocalContent()"/>
 		</form>
 
