--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
 			<div class="label">Employee Number:</div><textarea type="text" id="employeeNum" class="textArea"></textarea>
 			<div class="label">Weather or Special Conditions:</div><textarea type="text" id="weatherCom" class="textArea"></textarea>
 			<br/><br/><br/><br/>
-			<input type="button" value="&rArr;" class="btn" id="btnSave" onclick="storeLocalContent()"/>
+			<input type="button" value="" class="btn" id="btnSave" onclick="storeLocalContent()"/>
 			<input type="button" value="Clear Memory" class="btn" id="btnClear" onclick="clearLocalContent()"/>
 		</form>
 
