--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -7,9 +7,9 @@
 <body>
 
 <div class="center pageTwo container page">
-			<h1>Select all Inspections to be Performed Now:</h1>
+			<h1>Choose all Inspects you will be doing now.</h1>
 		<form>
-			<h3>1.) General Inspection:</h3>
+			<h3>A. General Inspection:</h3>
 				<input type="checkbox" class="check" name="option1" id="jobsite" value="JobsiteInspection"> A.) Jobsite(Trailer or Vehicle)<br><br>
 				<input type="checkbox" class="check" name="option1" id="facility" value="FacilitySecurity"> B.) Facility Security &amp; Public Safety<br><br>
 				<input type="checkbox" class="check" name="option1" id="ppe" value="PPE"> C.) Personal Protection Equiptment(PPE)<br><br>
@@ -20,25 +20,25 @@
 				<input type="checkbox" class="check" name="option1" id="licensing" value="licensing"> H.) Licensing<br><br>
 				<br/><br/><br/><br/>
 			
-			<h3>2.) Fall Prevention</h3>
+			<h3>B. Fall Prevention</h3>
 				<input type="checkbox" class="check" name="option1" id="generalFall" value="GeneralFall"> A.) General Fall Protection<br><br>
 				<input type="checkbox" class="check" name="option1" id="scaffold" value="Scaffolding"> B.) Scaffolding<br><br>
 				<input type="checkbox" class="check" name="option1" id="ladder" value="LadderStair"> C.) Ladders/Stairways<br><br>
 				<br/><br/><br/><br/>
 
-			<h3>3.) Power Tools/Electrical</h3>
+			<h3>C. Power Tools/Electrical</h3>
 				<input type="checkbox" class="check" name="option1" value="tools"> A.) Hand &amp; Power Tools<br><br>
 				<input type="checkbox" class="check" name="option1" value="electrical"> B.) Electrical<br><br>
 				<br/><br/><br/><br/>
 
-			<h3>4.) Heavy Equipment</h3>
+			<h3>D. Heavy Equipment</h3>
 				<input type="checkbox" class="check" name="option1" value="cranes"> A.) Cranes / Hoists / Elevators<br><br>
 				<input type="checkbox" class="check" name="option1" value="heavyEquip"> B.) Heavy Equipment<br><br>
 				<input type="checkbox" class="check" name="option1" value="trenching"> C.) Trenching &amp; Excavations<br><br>
 				<input type="checkbox" class="check" name="option1" value="demolition"> D.) Demolition &amp; Blasting<br><br>
 				<br/><br/><br/><br/>
 
-			<h3>5.) Specialty Trades / Operations</h3>
+			<h3>E. Specialty Trades / Operations</h3>
 				<input type="checkbox" class="check" name="option1" value="steelErection"> A.) Steel Erection<br><br>
 				<input type="checkbox" class="check" name="option1" value="concrete"> B.) Concrete &amp; Masonry<br><br>
 				<input type="checkbox" class="check" name="option1" value="welding"> C.) Welding / Cutting / Hot Work<br><br>
