--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -20,31 +20,35 @@
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="hazardSubs" value="HazardousSubstances"></div><div class="label"> G.) Hazardous Substances</div><br><br>
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="licensing" value="licensing"></div><div class="label"> H.) Licensing</div><br><br>
 				</div>
-				<br/><br/><br/><br/>
+			</div>	<br/><br/><br/><br/>
 			
 			<h3>B. Fall Prevention</h3>
+			<div class="form-section">
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="generalFall" value="GeneralFall"></div><div class="label"> A.) General Fall Protection</div><br><br>
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="scaffold" value="Scaffolding"></div><div class="label"> B.) Scaffolding</div><br><br>
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="ladder" value="LadderStair"></div><div class="label"> C.) Ladders/Stairways</div><br><br>
-				<br/><br/><br/><br/>
+			</div>	<br/><br/><br/><br/>
 
 			<h3>C. Power Tools/Electrical</h3>
+			<div class="form-section">
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="tools"></div><div class="label"> A.) Hand &amp; Power Tools</div><br><br>
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="electrical"></div><div class="label"> B.) Electrical</div><br><br>
-				<br/><br/><br/><br/>
+			</div>	<br/><br/><br/><br/>
 
 			<h3>D. Heavy Equipment</h3>
+			<div class="form-section">
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="cranes"></div><div class="label"> A.) Cranes / Hoists / Elevators</div><br><br>
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="heavyEquip"></div><div class="label"> B.) Heavy Equipment</div><br><br>
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="trenching"></div><div class="label"> C.) Trenching &amp; Excavations</div><br><br>
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="demolition"></div><div class="label"> D.) Demolition &amp; Blasting</div><br><br>
-				<br/><br/><br/><br/>
+			</div>	<br/><br/><br/><br/>
 
 			<h3>E. Specialty Trades / Operations</h3>
+			<div class="form-section">
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="steelErection"></div><div class="label"> A.) Steel Erection</div><br><br>
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="concrete"></div><div class="label"> B.) Concrete &amp; Masonry</div><br><br>
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="welding"></div><div class="label"> C.) Welding / Cutting / Hot Work</div><br><br>
-				<br/><br/>
+			</div>	<br/><br/>
 			<input type="button" value="Next Page >" id="btnSave" onclick="storeLocalContent()"/>
 			<input type="button" value="clear" id="btnClear" onclick="clearLocalContent()"/>
 	</div>
