--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -11,7 +11,7 @@
 		<form>
 			<h3>A. General Inspection:</h3>
 			       <div class="form-section">
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="jobsite" value="JobsiteInspection"></div><div class="label"> A.) Jobsite(Trailer or Vehicle)</div><br><br>
+				<div class="form-row"><div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="jobsite" value="JobsiteInspection"></div><div class="label"> A.) Jobsite(Trailer or Vehicle)</div></div><br><br>
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="facility" value="FacilitySecurity"></div><div class="label"> B.) Facility Security &amp; Public Safety</div><br><br>
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="ppe" value="PPE"><div class="label"></div> C.) Personal Protection Equiptment(PPE)</div><br><br>
 				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="housekeeping" value="housekeeping"></div><div class="label"> D.) Housekeeping</div><br><br>
