--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -10,45 +10,40 @@
 			<h1>Choose all Inspects you will be doing now.</h1>
 		<form>
 			<h3>A. General Inspection:</h3>
-			       <div class="form-section">
-				<div class="form-row"><div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="jobsite" value="JobsiteInspection"></div><div class="label"> A.) Jobsite(Trailer or Vehicle)</div></div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="facility" value="FacilitySecurity"></div><div class="label"> B.) Facility Security &amp; Public Safety</div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="ppe" value="PPE"><div class="label"></div> C.) Personal Protection Equiptment(PPE)</div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="housekeeping" value="housekeeping"></div><div class="label"> D.) Housekeeping</div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="fireProtection" value="FireProtection"></div><div class="label"> E.) Fire Protection or Prevention</div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="traffic" value="TrafficControl"></div><div class="label"> F.) Traffic Control</div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="hazardSubs" value="HazardousSubstances"></div><div class="label"> G.) Hazardous Substances</div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="licensing" value="licensing"></div><div class="label"> H.) Licensing</div><br><br>
+			       <input type="checkbox" class="check" name="option1" id="jobsite" value="JobsiteInspection"> A.) Jobsite(Trailer or Vehicle)<br><br>
+				<input type="checkbox" class="check" name="option1" id="facility" value="FacilitySecurity"> B.) Facility Security &amp; Public Safety<br><br>
+				<input type="checkbox" class="check" name="option1" id="ppe" value="PPE"><div class="label">< C.) Personal Protection Equiptment(PPE)<br><br>
+				<input type="checkbox" class="check" name="option1" id="housekeeping" value="housekeeping"> D.) Housekeeping<br><br>
+				<input type="checkbox" class="check" name="option1" id="fireProtection" value="FireProtection"> E.) Fire Protection or Prevention<br><br>
+				<input type="checkbox" class="check" name="option1" id="traffic" value="TrafficControl"> F.) Traffic Control<br><br>
+				<input type="checkbox" class="check" name="option1" id="hazardSubs" value="HazardousSubstances"> G.) Hazardous Substances<br><br>
+			         <input type="checkbox" class="check" name="option1" id="licensing" value="licensing"> H.) Licensing<br><br>
 				</div>
 			</div>	<br/><br/><br/><br/>
 			
 			<h3>B. Fall Prevention</h3>
-			<div class="form-section">
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="generalFall" value="GeneralFall"></div><div class="label"> A.) General Fall Protection</div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="scaffold" value="Scaffolding"></div><div class="label"> B.) Scaffolding</div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" id="ladder" value="LadderStair"></div><div class="label"> C.) Ladders/Stairways</div><br><br>
-			</div>	<br/><br/><br/><br/>
+			<input type="checkbox" class="check" name="option1" id="generalFall" value="GeneralFall"> A.) General Fall Protection<br><br>
+			<input type="checkbox" class="check" name="option1" id="scaffold" value="Scaffolding"> B.) Scaffolding<br><br>
+			<input type="checkbox" class="check" name="option1" id="ladder" value="LadderStair"> C.) Ladders/Stairways<br><br>
+			<br/><br/><br/><br/>
 
 			<h3>C. Power Tools/Electrical</h3>
-			<div class="form-section">
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="tools"></div><div class="label"> A.) Hand &amp; Power Tools</div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="electrical"></div><div class="label"> B.) Electrical</div><br><br>
+			<input type="checkbox" class="check" name="option1" value="tools"> A.) Hand &amp; Power Tools<br><br>
+				<input type="checkbox" class="check" name="option1" value="electrical"> B.) Electrical<br><br>
 			</div>	<br/><br/><br/><br/>
 
 			<h3>D. Heavy Equipment</h3>
-			<div class="form-section">
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="cranes"></div><div class="label"> A.) Cranes / Hoists / Elevators</div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="heavyEquip"></div><div class="label"> B.) Heavy Equipment</div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="trenching"></div><div class="label"> C.) Trenching &amp; Excavations</div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="demolition"></div><div class="label"> D.) Demolition &amp; Blasting</div><br><br>
-			</div>	<br/><br/><br/><br/>
+			<input type="checkbox" class="check" name="option1" value="cranes"> A.) Cranes / Hoists / Elevators<br><br>
+			<input type="checkbox" class="check" name="option1" value="heavyEquip"> B.) Heavy Equipment<br><br>
+			<input type="checkbox" class="check" name="option1" value="trenching"> C.) Trenching &amp; Excavations<br><br>
+			<input type="checkbox" class="check" name="option1" value="demolition"> D.) Demolition &amp; Blasting<br><br>
+				<br/><br/><br/><br/>
 
 			<h3>E. Specialty Trades / Operations</h3>
-			<div class="form-section">
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="steelErection"></div><div class="label"> A.) Steel Erection</div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="concrete"></div><div class="label"> B.) Concrete &amp; Masonry</div><br><br>
-				<div class="form-checkbox"><input type="checkbox" class="check" name="option1" value="welding"></div><div class="label"> C.) Welding / Cutting / Hot Work</div><br><br>
-			</div>	<br/><br/>
+			<input type="checkbox" class="check" name="option1" value="steelErection"> A.) Steel Erection<br><br>
+			<input type="checkbox" class="check" name="option1" value="concrete"> B.) Concrete &amp; Masonry<br><br>
+			<input type="checkbox" class="check" name="option1" value="welding"> C.) Welding / Cutting / Hot Work<br><br>
+			<br/><br/>
 			<input type="button" value="Next Page >" id="btnSave" onclick="storeLocalContent()"/>
 			<input type="button" value="clear" id="btnClear" onclick="clearLocalContent()"/>
 	</div>
