--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -12,7 +12,7 @@
 			<h3>A. General Inspection:</h3>
 			       <input type="checkbox" class="check" name="option1" id="jobsite" value="JobsiteInspection"> A.) Jobsite(Trailer or Vehicle)<br><br>
 				<input type="checkbox" class="check" name="option1" id="facility" value="FacilitySecurity"> B.) Facility Security &amp; Public Safety<br><br>
-				<input type="checkbox" class="check" name="option1" id="ppe" value="PPE"><div class="label">< C.) Personal Protection Equiptment(PPE)<br><br>
+				<input type="checkbox" class="check" name="option1" id="ppe" value="PPE"><div class="label"> C.) Personal Protection Equiptment(PPE)<br><br>
 				<input type="checkbox" class="check" name="option1" id="housekeeping" value="housekeeping"> D.) Housekeeping<br><br>
 				<input type="checkbox" class="check" name="option1" id="fireProtection" value="FireProtection"> E.) Fire Protection or Prevention<br><br>
 				<input type="checkbox" class="check" name="option1" id="traffic" value="TrafficControl"> F.) Traffic Control<br><br>
