--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -10,7 +10,7 @@
 			<h1>Choose all Inspects you will be doing now.</h1>
 		<form>
 			<h3>A. General Inspection:</h3>
-			       <input type="checkbox" class="check" name="option1" id="jobsite" value="JobsiteInspection"> <div class="label">A.) Jobsite(Trailer or Vehicle)</div><br><br>
+			       <div class="label"><input type="checkbox" class="check" name="option1" id="jobsite" value="JobsiteInspection"> A.) Jobsite(Trailer or Vehicle)</div><br><br>
 				<input type="checkbox" class="check" name="option1" id="facility" value="FacilitySecurity"> B.) Facility Security &amp; Public Safety<br><br>
 				<input type="checkbox" class="check" name="option1" id="ppe" value="PPE"><div class="label"> C.) Personal Protection Equiptment(PPE)<br><br>
 				<input type="checkbox" class="check" name="option1" id="housekeeping" value="housekeeping"> D.) Housekeeping<br><br>
