--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -11,13 +11,13 @@
 		<form>
 			<h3>A. General Inspection:</h3>
 			       <div class="form-label"><input type="checkbox" class="check" name="option1" id="jobsite" value="JobsiteInspection"> <div class="label-inset">A.) Jobsite(Trailer or Vehicle)</div></div><br><br>
-				<input type="checkbox" class="check" name="option1" id="facility" value="FacilitySecurity"> B.) Facility Security &amp; Public Safety<br><br>
-				<input type="checkbox" class="check" name="option1" id="ppe" value="PPE"><div class="label"> C.) Personal Protection Equiptment(PPE)<br><br>
-				<input type="checkbox" class="check" name="option1" id="housekeeping" value="housekeeping"> D.) Housekeeping<br><br>
-				<input type="checkbox" class="check" name="option1" id="fireProtection" value="FireProtection"> E.) Fire Protection or Prevention<br><br>
-				<input type="checkbox" class="check" name="option1" id="traffic" value="TrafficControl"> F.) Traffic Control<br><br>
-				<input type="checkbox" class="check" name="option1" id="hazardSubs" value="HazardousSubstances"> G.) Hazardous Substances<br><br>
-			         <input type="checkbox" class="check" name="option1" id="licensing" value="licensing"> H.) Licensing<br><br>
+				<div class="form-label"><input type="checkbox" class="check" name="option1" id="facility" value="FacilitySecurity"> <div class="label-inset">B.) Facility Security &amp; Public Safety</div></div><br><br>
+				<div class="form-label"><input type="checkbox" class="check" name="option1" id="ppe" value="PPE"><div class="label"> <div class="label-inset">C.) Personal Protection Equiptment(PPE)</div></div><br><br>
+				<div class="form-label"><input type="checkbox" class="check" name="option1" id="housekeeping" value="housekeeping"> <div class="label-inset">D.) Housekeeping</div></div><br><br>
+				<div class="form-label"><input type="checkbox" class="check" name="option1" id="fireProtection" value="FireProtection"> <div class="label-inset">E.) Fire Protection or Prevention</div></div><br><br>
+				<div class="form-label"><input type="checkbox" class="check" name="option1" id="traffic" value="TrafficControl"> <div class="label-inset">F.) Traffic Control</div></div><br><br>
+				<div class="form-label"><input type="checkbox" class="check" name="option1" id="hazardSubs" value="HazardousSubstances"> <div class="label-inset">G.) Hazardous Substances</div></div><br><br>
+			         <div class="form-label"><input type="checkbox" class="check" name="option1" id="licensing" value="licensing"> <div class="label-inset">H.) Licensing</div></div><br><br>
 				</div>
 			</div>	<br/><br/><br/><br/>
 			
