--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -12,7 +12,7 @@
 			<h3>A. General Inspection:</h3>
 			       <div class="form-label"><input type="checkbox" class="check" name="option1" id="jobsite" value="JobsiteInspection"> <div class="label-inset">A.) Jobsite(Trailer or Vehicle)</div></div><br><br>
 				<div class="form-label"><input type="checkbox" class="check" name="option1" id="facility" value="FacilitySecurity"> <div class="label-inset">B.) Facility Security &amp; Public Safety</div></div><br><br>
-				<div class="form-label"><input type="checkbox" class="check" name="option1" id="ppe" value="PPE"><div class="label"> <div class="label-inset">C.) Personal Protection Equiptment(PPE)</div></div><br><br>
+				<div class="form-label"><input type="checkbox" class="check" name="option1" id="ppe" value="PPE"> <div class="label-inset">C.) Personal Protection Equiptment(PPE)</div></div><br><br>
 				<div class="form-label"><input type="checkbox" class="check" name="option1" id="housekeeping" value="housekeeping"> <div class="label-inset">D.) Housekeeping</div></div><br><br>
 				<div class="form-label"><input type="checkbox" class="check" name="option1" id="fireProtection" value="FireProtection"> <div class="label-inset">E.) Fire Protection or Prevention</div></div><br><br>
 				<div class="form-label"><input type="checkbox" class="check" name="option1" id="traffic" value="TrafficControl"> <div class="label-inset">F.) Traffic Control</div></div><br><br>
