--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -17,30 +17,30 @@
 				<div class="form-label"><input type="checkbox" class="check" name="option1" id="fireProtection" value="FireProtection"> <div class="label-inset">E.) Fire Protection or Prevention</div></div><br><br>
 				<div class="form-label"><input type="checkbox" class="check" name="option1" id="traffic" value="TrafficControl"> <div class="label-inset">F.) Traffic Control</div></div><br><br>
 				<div class="form-label"><input type="checkbox" class="check" name="option1" id="hazardSubs" value="HazardousSubstances"> <div class="label-inset">G.) Hazardous Substances</div></div><br><br>
-			         <div class="form-label"><input type="checkbox" class="check" name="option1" id="licensing" value="licensing"> <div class="label-inset">H.) Licensing</div></div><br><br>
+			         <div class="form-label"><input type="checkbox" class="check" name="option1" id="licensing" value="licensing"> <div class="label-inset">H.) Licensing</div></div><br><br><br>
 			
 			<h3>B. Fall Prevention</h3>
 			<div class="form-label"><input type="checkbox" class="check" name="option1" id="generalFall" value="GeneralFall"> <div class="label-inset">A.) General Fall Protection</div></div><br><br>
 			<div class="form-label"><input type="checkbox" class="check" name="option1" id="scaffold" value="Scaffolding"> <div class="label-inset">B.) Scaffolding</div></div><br><br>
-			<div class="form-label"><input type="checkbox" class="check" name="option1" id="ladder" value="LadderStair"> <div class="label-inset">C.) Ladders/Stairways</div></div><br><br>
+			<div class="form-label"><input type="checkbox" class="check" name="option1" id="ladder" value="LadderStair"> <div class="label-inset">C.) Ladders/Stairways</div></div><br><br><br>
 
 
 			<h3>C. Power Tools/Electrical</h3>
 			<div class="form-label"><input type="checkbox" class="check" name="option1" value="tools"> <div class="label-inset">A.) Hand &amp; Power Tools</div></div><br><br>
-			<div class="form-label"><input type="checkbox" class="check" name="option1" value="electrical"> <div class="label-inset">B.) Electrical</div></div><br><br>
+			<div class="form-label"><input type="checkbox" class="check" name="option1" value="electrical"> <div class="label-inset">B.) Electrical</div></div><br><br><br>
 
 
 			<h3>D. Heavy Equipment</h3>
 			<div class="form-label"><input type="checkbox" class="check" name="option1" value="cranes"> <div class="label-inset">A.) Cranes / Hoists / Elevators</div></div><br><br>
 			<div class="form-label"><input type="checkbox" class="check" name="option1" value="heavyEquip"> <div class="label-inset">B.) Heavy Equipment</div></div><br><br>
 			<div class="form-label"><input type="checkbox" class="check" name="option1" value="trenching"> <div class="label-inset">C.) Trenching &amp; Excavations</div></div><br><br>
-			<div class="form-label"><input type="checkbox" class="check" name="option1" value="demolition"> <div class="label-inset">D.) Demolition &amp; Blasting</div></div><br><br>
+			<div class="form-label"><input type="checkbox" class="check" name="option1" value="demolition"> <div class="label-inset">D.) Demolition &amp; Blasting</div></div><br><br><br>
 
 
 			<h3>E. Specialty Trades / Operations</h3>
 			<div class="form-label"><input type="checkbox" class="check" name="option1" value="steelErection"> <div class="label-inset">A.) Steel Erection</div></div><br><br>
 			<div class="form-label"><input type="checkbox" class="check" name="option1" value="concrete"> <div class="label-inset">B.) Concrete &amp; Masonry</div></div><br><br>
-			<div class="form-label"><input type="checkbox" class="check" name="option1" value="welding"> <div class="label-inset">C.) Welding / Cutting / Hot Work</div></div><br><br>
+			<div class="form-label"><input type="checkbox" class="check" name="option1" value="welding"> <div class="label-inset">C.) Welding / Cutting / Hot Work</div></div><br><br><br>
 
 			<input type="button" value="Next Page >" id="btnSave" onclick="storeLocalContent()"/>
 			<input type="button" value="clear" id="btnClear" onclick="clearLocalContent()"/>
