--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -42,7 +42,7 @@
 			<div class="form-label"><input type="checkbox" class="check" name="option1" value="concrete"> <div class="label-inset">B.) Concrete &amp; Masonry</div></div><br><br>
 			<div class="form-label"><input type="checkbox" class="check" name="option1" value="welding"> <div class="label-inset">C.) Welding / Cutting / Hot Work</div></div><br><br><br>
 
-			<input type="button" value="Next Page >" id="btnSave" onclick="storeLocalContent()"/>
+			<div class="arrowright"></div><input type="button" id="btnSave" onclick="storeLocalContent()"/>
 			<input type="button" value="clear" id="btnClear" onclick="clearLocalContent()"/>
 	</div>
 
