--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -44,7 +44,7 @@
 
 			<input type="button" id="btnSave" value="Submit Form" onclick="storeLocalContent()"/>
 			<div class="arrowleft"></div><input type="button" id="btnBack" onclick="goBack()"/>
-			<input type="button" value="clear" id="btnClear" onclick="clearLocalContent()"/>
+			<!-- <input type="button" value="clear" id="btnClear" onclick="clearLocalContent()"/> -->
 	</div>
 
 </body>
