--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -42,8 +42,9 @@
 			<div class="form-label"><input type="checkbox" class="check" name="option1" value="concrete"> <div class="label-inset">B.) Concrete &amp; Masonry</div></div><br><br>
 			<div class="form-label"><input type="checkbox" class="check" name="option1" value="welding"> <div class="label-inset">C.) Welding / Cutting / Hot Work</div></div><br><br><br>
 
+                        <div class="after-form">
 			<input type="button" id="btnSave" value="Submit Form" onclick="storeLocalContent()"/>
-			<div class="arrowleft"></div><input type="button" id="btnBack" onclick="goBack()"/>
+			<div class="arrowleft"></div><input type="button" id="btnBack" onclick="goBack()"/></div>
 			<!-- <input type="button" value="clear" id="btnClear" onclick="clearLocalContent()"/> -->
 	</div>
 
