--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -43,6 +43,7 @@
 			<div class="form-label"><input type="checkbox" class="check" name="option1" value="welding"> <div class="label-inset">C.) Welding / Cutting / Hot Work</div></div><br><br><br>
 
                         <div class="after-form">
+                        <input type="button" id="btnSaveLater" value="Save Answers and Resume Later" onclick="storeLocalContent()"/>
 			<input type="button" id="btnSave" value="Submit Form" onclick="storeLocalContent()"/>
 			<div class="arrowleft"></div><input type="button" id="btnBack" onclick="goBack()"/></div>
 			<!-- <input type="button" value="clear" id="btnClear" onclick="clearLocalContent()"/> -->
