--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -3,6 +3,11 @@
 <head>
 	<title>Local Data Test</title>
 	<link href="style/style.css" rel="stylesheet"/>
+	<script>
+function goBack() {
+    window.history.back()
+}
+</script>
 </head>
 <body>
 
