--- a/www/index.html
+++ b/www/index.html
@@ -28,8 +28,11 @@
 			<div class="label">Employee Number:</div><textarea type="text" id="employeeNum" class="textArea"></textarea>
 			<div class="label">Weather or Special Conditions:</div><textarea type="text" id="weatherCom" class="textArea"></textarea>
 			<br/><br/><br/><br/>
+			<div class="after-form">
+                        <input type="button" id="btnSaveLater" value="Save Answers and Resume Later" onclick="storeLocalContent()"/>
 			<div class="arrowright"></div><input type="button" class="btn" id="btnSave" onclick="storeLocalContent()"/>
-			<input type="button" value="Clear Memory" class="btn" id="btnClear" onclick="clearLocalContent()"/>
+			<!-- <input type="button" value="Clear Memory" class="btn" id="btnClear" onclick="clearLocalContent()"/> -->
+			</div>
 		</form>
 
 
