--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -15,7 +15,7 @@ function goBack() {
 			<h1>Choose all Inspects you will be doing now.</h1>
 		<form>
 			<h3>A. General Inspection:</h3>
-			       <div class="form-label"><input type="checkbox" class="check" name="option1" id="jobsite" value="JobsiteInspection"> <div class="label-inset">A.) Jobsite(Trailer or Vehicle)</div></div><br><br>
+			       <div class="form-label"><input type="checkbox" class="check" name="option1" id="jobsite" value="JobsiteInspection"> <div class="label-inset">A.) Jobsite(Trailer or Vehicle)</div></div><br><br><br><br>
 				<div class="form-label"><input type="checkbox" class="check" name="option1" id="facility" value="FacilitySecurity"> <div class="label-inset">B.) Facility Security &amp; Public Safety</div></div><br><br>
 				<div class="form-label"><input type="checkbox" class="check" name="option1" id="ppe" value="PPE"> <div class="label-inset">C.) Personal Protection Equiptment(PPE)</div></div><br><br>
 				<div class="form-label"><input type="checkbox" class="check" name="option1" id="housekeeping" value="housekeeping"> <div class="label-inset">D.) Housekeeping</div></div><br><br>
