--- a/www/pageTwo.html
+++ b/www/pageTwo.html
@@ -22,8 +22,8 @@ function goBack() {
 				<div class="form-label"><input type="checkbox" class="check" name="option1" id="fireProtection" value="FireProtection"> <div class="label-inset">E.) Fire Protection or Prevention</div></div><br><br>
 				<div class="form-label"><input type="checkbox" class="check" name="option1" id="traffic" value="TrafficControl"> <div class="label-inset">F.) Traffic Control</div></div><br><br>
 				<div class="form-label"><input type="checkbox" class="check" name="option1" id="hazardSubs" value="HazardousSubstances"> <div class="label-inset">G.) Hazardous Substances</div></div><br><br>
-			         <div class="form-label"><input type="checkbox" class="check" name="option1" id="licensing" value="licensing"> <div class="label-inset">H.) Licensing</div></div></div><br><br><br>
-			
+			         <div class="form-label"><input type="checkbox" class="check" name="option1" id="licensing" value="licensing"> <div class="label-inset">H.) Licensing</div></div><br><br><br>
+			<br><br>
 			<h3>B. Fall Prevention</h3>
 			<div class="form-label"><input type="checkbox" class="check" name="option1" id="generalFall" value="GeneralFall"> <div class="label-inset">A.) General Fall Protection</div></div><br><br>
 			<div class="form-label"><input type="checkbox" class="check" name="option1" id="scaffold" value="Scaffolding"> <div class="label-inset">B.) Scaffolding</div></div><br><br>
